location and convertion datetime experssion
