# app_bot/demo/static/v1/swagger.json
@@ -41,22 +41,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "properties": {
-                "set_attributes": {
-                  "type": "object",
-                  "properties": {
-                    "booking_date": {
-                      "type": "string",
-                      "format": "date"
-                    },
-                    "booking_time": {
-                      "type": "string",
-                      "pattern": "^\\d{2}(AM|PM)$"
-                    }
-                  }
-                }
-              }
+              "$ref": "#/definitions/schemas/set_date"
             }
           },
           "405": {
@@ -99,7 +84,7 @@
                             "title": {
                               "type": "string"
                             },
-                            "set_attribute": {
+                            "set_attributes": {
                               "type": "object",
                               "properties": {
                                 "location": {
@@ -118,7 +103,7 @@
                           },
                           "text_attribute_name": {
                             "type": "string",
-                            "default": "dentist_name"
+                            "default": "location"
                           }
                         }
                       }
@@ -186,7 +171,7 @@
                               "type": "string",
                               "description": "dentist name"
                             },
-                            "set_attribute": {
+                            "set_attributes": {
                               "type": "object",
                               "properties": {
                                 "dentist_name": {
@@ -326,7 +311,7 @@
                               "type": "string",
                               "description": "booking time"
                             },
-                            "set_attribute": {
+                            "set_attributes": {
                               "type": "object",
                               "properties": {
                                 "booking_time": {
@@ -503,7 +488,7 @@
                               "type": "string",
                               "description": "booking time"
                             },
-                            "set_attribute": {
+                            "set_attributes": {
                               "type": "object",
                               "properties": {
                                 "booking_time": {
@@ -589,6 +574,116 @@
           },
           "default": {
             "description": "Something is wrong"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "schemas": {
+      "set_date_time": {
+        "type": "object",
+        "properties": {
+          "set_attributes": {
+            "type": "object",
+            "properties": {
+              "booking_date": {
+                "type": "string",
+                "format": "date"
+              },
+              "booking_time": {
+                "type": "string",
+                "enum": [
+                  "09AM",
+                  "10AM",
+                  "11AM",
+                  "12PM",
+                  "01PM",
+                  "02PM",
+                  "03PM",
+                  "04PM",
+                  "05PM"
+                ]
+              }
+            }
+          }
+        }
+      },
+      "set_date": {
+        "type": "object",
+        "properties": {
+          "redirect_to_blocks": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "set_attributes": {
+            "type": "object",
+            "properties": {
+              "booking_date": {
+                "type": "string",
+                "format": "date"
+              },
+              "booking_time": {
+                "type": "string",
+                "enum": [
+                  "09AM",
+                  "10AM",
+                  "11AM",
+                  "12PM",
+                  "01PM",
+                  "02PM",
+                  "03PM",
+                  "04PM",
+                  "05PM"
+                ]
+              }
+            }
+          },
+          "messages": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "text": {
+                  "type": "string"
+                },
+                "quick_replies": {
+                  "type": "array",
+                  "minItems": 1,
+                  "maxItems": 11,
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "title": {
+                        "type": "string"
+                      },
+                      "set_attributes": {
+                        "type": "object",
+                        "properties": {
+                          "location": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "quick_reply_options": {
+                  "type": "object",
+                  "properties": {
+                    "process_text_by_ai": {
+                      "type": "boolean"
+                    },
+                    "text_attribute_name": {
+                      "type": "string",
+                      "default": "location"
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
