# app_bot/demo/v1/schemas.py
@@ -50,7 +50,7 @@ class RefNode(object):
 
 base_path = '/v1'
 
-definitions = {'definitions': {}, 'parameters': {}}
+definitions = {'definitions': {'schemas': {'set_date_time': {'type': 'object', 'properties': {'set_attributes': {'type': 'object', 'properties': {'booking_date': {'type': 'string', 'format': 'date'}, 'booking_time': {'type': 'string', 'enum': ['09AM', '10AM', '11AM', '12PM', '01PM', '02PM', '03PM', '04PM', '05PM']}}}}}, 'set_date': {'type': 'object', 'properties': {'redirect_to_blocks': {'type': 'array', 'items': {'type': 'string'}}, 'set_attributes': {'type': 'object', 'properties': {'booking_date': {'type': 'string', 'format': 'date'}, 'booking_time': {'type': 'string', 'enum': ['09AM', '10AM', '11AM', '12PM', '01PM', '02PM', '03PM', '04PM', '05PM']}}}, 'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string'}, 'set_attributes': {'type': 'object', 'properties': {'location': {'type': 'string'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'location'}}}}}}}}}}, 'parameters': {}}
 
 validators = {
     ('datetime', 'GET'): {'args': {'required': [], 'properties': {'datetime_exp': {'type': 'string'}}}},
@@ -63,14 +63,14 @@ validators = {
 }
 
 filters = {
-    ('datetime', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'set_attributes': {'type': 'object', 'properties': {'booking_date': {'type': 'string', 'format': 'date'}, 'booking_time': {'type': 'string', 'pattern': '^\\d{2}(AM|PM)$'}}}}}}, 405: {'headers': None, 'schema': None}},
-    ('locations', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string'}, 'set_attribute': {'type': 'object', 'properties': {'location': {'type': 'string'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'dentist_name'}}}}}}}}}, 405: {'headers': None, 'schema': None}},
-    ('dentists', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string', 'description': 'dentist name'}, 'set_attribute': {'type': 'object', 'properties': {'dentist_name': {'type': 'string'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'dentist_name'}}}}}}}}}},
+    ('datetime', 'GET'): {200: {'headers': None, 'schema': {'$ref': '#/definitions/schemas/set_date'}}, 405: {'headers': None, 'schema': None}},
+    ('locations', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string'}, 'set_attributes': {'type': 'object', 'properties': {'location': {'type': 'string'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'location'}}}}}}}}}, 405: {'headers': None, 'schema': None}},
+    ('dentists', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string', 'description': 'dentist name'}, 'set_attributes': {'type': 'object', 'properties': {'dentist_name': {'type': 'string'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'dentist_name'}}}}}}}}}},
     ('dentists_dentist_name', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string'}, 'block_names': {'type': 'array', 'items': {'type': 'string'}}}}}}}}}}}},
-    ('dentists_dentist_name_timeslots', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string', 'description': 'booking time'}, 'set_attribute': {'type': 'object', 'properties': {'booking_time': {'type': 'string'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'booking_time'}}}}}}}}}},
+    ('dentists_dentist_name_timeslots', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string', 'description': 'booking time'}, 'set_attributes': {'type': 'object', 'properties': {'booking_time': {'type': 'string'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'booking_time'}}}}}}}}}},
     ('timeslots', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'redirect_to_blocks': {'type': 'array', 'items': {'type': 'string'}}}}}},
     ('appointments', 'POST'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'redirect_to_blocks': {'type': 'array', 'items': {'type': 'string'}}}}}},
-    ('appointments', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string', 'description': 'booking time'}, 'set_attribute': {'type': 'object', 'properties': {'booking_time': {'type': 'string'}, 'booking_date': {'type': 'string', 'format': 'date'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'booking_time'}}}}}}}}}},
+    ('appointments', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'messages': {'type': 'array', 'items': {'type': 'object', 'properties': {'text': {'type': 'string'}, 'quick_replies': {'type': 'array', 'minItems': 1, 'maxItems': 11, 'items': {'type': 'object', 'properties': {'title': {'type': 'string', 'description': 'booking time'}, 'set_attributes': {'type': 'object', 'properties': {'booking_time': {'type': 'string'}, 'booking_date': {'type': 'string', 'format': 'date'}}}}}}, 'quick_reply_options': {'type': 'object', 'properties': {'process_text_by_ai': {'type': 'boolean'}, 'text_attribute_name': {'type': 'string', 'default': 'booking_time'}}}}}}}}}},
     ('appointments_cancel', 'POST'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'redirect_to_blocks': {'type': 'array', 'items': {'type': 'string'}}}}}},
 }
 
